// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`P3 evidence snapshots > snapshots cli evidence html 1`] = `
"<!doctype html>
<html>
<head>
  <meta charset="utf-8" />
  <style>
    body { font-family: Arial, sans-serif; padding: 24px; }
    table { border-collapse: collapse; width: 100%; margin-bottom: 16px; }
    td, th { border: 1px solid #ccc; padding: 6px; text-align: left; vertical-align: top; }
    th { background: #f5f5f5; width: 160px; }
    pre { background: #f8f8f8; padding: 12px; white-space: pre-wrap; }
  </style>
</head>
<body>
  <h2>CLI Evidence</h2>
  <table><tbody><tr><th>Step</th><td>cli</td></tr><tr><th>Command</th><td>node</td></tr><tr><th>Args</th><td>-e console.log('ok'); console.error('err');</td></tr><tr><th>Cwd</th><td>-</td></tr><tr><th>TimeoutMs</th><td>-</td></tr><tr><th>Exit code</th><td>0</td></tr><tr><th>DurationMs</th><td>X</td></tr></tbody></table>
  <h3>Commands</h3><table><thead><tr><th>Label</th><th>Command</th><th>Exit</th><th>DurationMs</th></tr></thead><tbody><tr>
  <td>run</td>
  <td>node -e console.log('ok'); console.error('err');</td>
  <td>0</td>
  <td>X</td>
</tr></tbody></table>
  <h3>Stdout</h3><pre>--- run: node -e console.log('ok'); console.error('err'); ---
ok

</pre>
  <h3>Stderr</h3><pre>--- run: node -e console.log('ok'); console.error('err'); ---
err

</pre>
</body>
</html>"
`;

exports[`P3 evidence snapshots > snapshots swagger evidence html 1`] = `
"<!doctype html>
<html>
<head>
  <meta charset="utf-8" />
  <style>
    body { font-family: Arial, sans-serif; padding: 24px; }
    table { border-collapse: collapse; width: 100%; margin-bottom: 16px; }
    td, th { border: 1px solid #ccc; padding: 6px; text-align: left; vertical-align: top; }
    th { background: #f5f5f5; width: 180px; }
    pre { background: #f8f8f8; padding: 12px; white-space: pre-wrap; }
  </style>
</head>
<body>
  <h2>Swagger Evidence</h2>
  <table><tbody><tr><th>Step</th><td>swagger</td></tr><tr><th>OperationId</th><td>getTodoById</td></tr><tr><th>Method</th><td>GET</td></tr><tr><th>Path</th><td>/todos/{id}</td></tr><tr><th>Response selector</th><td>#resp</td></tr></tbody></table>
  <h3>Request body</h3><pre>{
  "content": {
    "application/json": {
      "schema": {
        "type": "object",
        "properties": {
          "id": {
            "type": "integer"
          }
        }
      }
    }
  }
}</pre>
  <h3>Response body</h3><pre>{"id":1,"title":"hello"}</pre>
</body>
</html>"
`;
